--- a/thesis/preamble.sty
+++ b/thesis/preamble.sty
@@ -20,6 +20,7 @@
 \usepackage{hyperref}
 \usepackage[yyyymmdd]{datetime} % for writing dates
 \usepackage{float} % force float to position with H
+\usepackage[framemethod=tikz]{mdframed} % frame around figures
 
 % fullcite/1: cite both author and numeric code of reference
 \newcommand{\fullcite}[1]{\citeauthor{#1} \cite{#1}}
