Revised Chapter "Introduction".

--- a/thesis/introduction.ltx
+++ b/thesis/introduction.ltx
@@ -33,11 +33,9 @@ Different approaches in using neural word embeddings for classification of orpha
 
 In this work, the taxonomy of Wikidata is considered as case example, as it provides a high number of entities ($24,507,102$ in \dumpdate{} \cite{WikidataDump}),
 and a big taxonomy consisting of $1,299,501$ classes \cite{WikidataDump}.
-At this time, Wikidata's taxonomy is maintained by human editors.
+At this time, Wikidata's taxonomy is mostly maintained by human editors.
 The solution developed by the thesis should be able to support the editors in improving the completeness of the taxonomy by reducing the number of orphan classes
 and refining the existing taxonomic relations between classes.
-$16,373$ orphan classes were identified by the author in the dump of \dumpdate{} \cite{WikidataDump}.
-\textbf{TODO: describe this more}
 
 The thesis is structured as follows.
 In Chapter~\ref{section:foundations} the problem will be formally defined (\ref{section:wikidata}, \ref{section:taxonomy}, \ref{section:similarity}, \ref{section:problem statement})
@@ -54,4 +52,7 @@ Formatting of text obeys the following rules.
 Italic text indicates Wikidata entities like \entity{} or \textit{instance of (P31)}.
 Bold text indicates the first occurrence of a relevant concept, such as \textbf{orphan class}.
 Such concepts are described in the following sentences and, if necessary, formally defined.
+Figures with long descriptions are framed to clearly separate continuous text and description of the figure.
+In-line quotes are indicated by quotation marks. The corresponding citation is placed after the quote.
+Multi-line quotes are indented. The quote is introduced by a short sentence, which contains the citation.
 
