--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -713,3 +713,15 @@ note={Accessed: 2016-11-20}
  pages={2825--2830},
  year={2011}
 }
+% wikidata gene bot
+@article {Putman2017,
+	author = {Putman, Tim E and Lelong, Sebastien and Burgstaller-Muelhbacher, Sebastian and Waagmeester, Andra and Diesh, Colin and Dunn, Nathan and Munoz-Torres, Monica and Stupp, Gregory and Su, Andrew and Good, Benjamin M},
+	title = {WikiGenomes: an open Web application for community consumption and curation of gene annotation data in Wikidata.},
+	year = {2017},
+	doi = {10.1101/102046},
+	publisher = {Cold Spring Harbor Labs Journals},
+	abstract = {With the advancement of genome sequencing technologies new genomes are being sequenced daily. While these sequences are deposited in publicly available data warehouses, their functional and genomic annotations mostly reside in the text of primary publications. Biocurators are hard at work extracting those annotations from the literature for the most studied organisms and depositing them in structured databases. However, the resources don{\textquoteright}t exist to fund the comprehensive curation of the thousands of newly sequenced organisms in this manner. Here we describe WikiGenomes (wikigenomes.org), a web application that facilitates the consumption and curation of genomic data by the entire scientific community. WikiGenomes is based on Wikidata, an openly editable knowledge graph with the goal of aggregating published knowledge into a free and open database. WikiGenomes empowers community curation of genomic and biomedical knowledge through a domain-specific application built on top of Wikidata, bringing that curated knowledge to the public domain.},
+	URL = {http://biorxiv.org/content/early/2017/01/24/102046},
+	eprint = {http://biorxiv.org/content/early/2017/01/24/102046.full.pdf},
+	journal = {bioRxiv}
+}
