Rewrote Section "Neural networks in ontology learning".

--- a/thesis/algorithm.ltx
+++ b/thesis/algorithm.ltx
@@ -104,7 +104,7 @@ Intuitively a kNN classifier (see Section \ref{section:knn}) should be able to u
 Distance-based kNN using the euclidean norm is implemented as classification component.
 The kNN implementation provided by the scikit-learn library \cite{scikit-learn} is used.
 
-\subsubsection{Vector offset}
+\subsubsection{Vector offset}\label{section:vector offset}
 
 \begin{figure}[H]
 \centering
